[workspace]
members = ["my_proc_macro"]

[package]
name = "proc_macro_demo"
version = "0.1.0"
edition = "2021"
resolver = "2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my_proc_macro = { path = "./my_proc_macro" }
urlencoding = "2.1.3"
